--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/printocards-service-log
+MONGO_URI=mongodb+srv://printoservicelogsheet:printoservicelogsheet@cluster.7s132e5.mongodb.net/
 JWT_SECRET=printocardssecretkeyword
